2017-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_uuid" is now in gvm-libs/util.

	* misc/openvas_uuid.c, misc/openvas_uuid.h: Removed.

	* misc/CMakeLists.txt: Removed handling of this module.

	* INSTALL: Remove uuid as dependency. Add missing requiremnt
	to gvmlib.

	* COPYING: Removed the files respectively.

	* misc/openvas_auth.c: Remove unneeded include.

2017-01-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Remove 'osp/' directory from
	Doxygen input.

2017-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Library "osp" is now in gvm-libs/osp.

	* CMakeLists.txt: Removed handling of osp.

	*  osp/, osp/CMakeLists.txt, osp/osp.c, osp/osp.h,
	libopenvas_osp.pc.in: Removed.

	* COPYING: Removed the files respectively.

2017-01-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_logging.c, misc/openvas_logging.h: Transferred
	copyright as requested by Laban Mwangi, the original author.

2017-01-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/pcap.c (v6_getsourceip): Fix typo in debug message.

2017-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "xml" is now in gvm-libs/util.

	* omp/xml.c, omp/xml.h: Removed.

	* omp/CMakeLists.txt: Removed handling of this module.

	* COPYING: Removed the files respectively.

	* omp/omp.c: Removed unneeded include of xml.h.

	* omp/omp.h: Include gvm/util/xmlutils.h instead of xml.h.

	* osp/osp.c: Removed some unneeded includes.

2017-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_server" is now in gvm-libs/util.

	* misc/openvas_server.c, misc/openvas_server.h: Removed.

	* misc/CMakeLists.txt: Removed handling of this module.

	* COPYING: Removed the files respectively.

	* misc/network.c: Include gvm/util/serverutils.h instead of
	openvas_server.h.

	* omp/omp.c: Include gvm/util/serverutils.h instead of